# risk_engine

./: .gitignore  README.md  checker.py  conftest.py  constants.py  formula.py  pipeline.py  post_rules.py  pyproject.toml  risk_checker.py  types.py
data/: indicators_config_v3.json
data/json/: final_results.json  group_sample.json  mock_final_results.json  risk_prompt_input_sample.json  risk_sample.json  sample_report.json
data/prompt/: #U8ca1#U5831#U6558#U4e8b_sys_prompt.txt  #U8ca1#U5831#U6558#U4e8b_user_prompt.txt  #U8ca1#U5831#U98a8#U96aa_sys_prompt.txt
scripts/: main.py  risk_checker.py  simple_test.py  smoke_test.ps1  smoke_test.sh
src/risk_engine/: __init__.py  checker.py  constants.py  loader.py  log_config.py  paths.py  pipeline.py  post_rules.py  report.py  threshold.py  types.py
src/utils/: __init__.py  convert_indicators.py  convert_report.py  convert_to_docx.py  csv_to_report_json.py  narrative.py  simple_convert.py  xlsx_to_indicators.py  xlsx_to_report_json.py
tests/: README.md  exe_test.py  test_checker.py  test_e2e_narrative.py  test_formula.py  test_loader.py  test_log_config.py  test_main.py  test_narrative.py  test_pipeline.py  test_pipeline_e2e.py  test_report.py  test_threshold.py  test_xlsx_to_indicators.py
tests/fixtures/: risk_sample_expected.json
utils/: combine_prompt.py  convert_indicators.py  csv_to_report_json.py  html_to_json.py  narrative.py  xlsx_to_indicators.py  xlsx_to_report_json.py
